		* Show git hash in about dialog for convenience
		* Use system liborigin when available
		* Open new project per default on startup
		* Examples Dialog - an easy way to browse through all available example projects and to open them directly in the application
		* Allow to save the project without the results of the calculations in the analysis curves to reduce the size of project file
	* [analysis]
		* Support Mathieu functions via GSL
		* Added Hilbert transform including envelope
		* Improve entering ranges for various methods
	* [import]
		* Import SAS, Stata and SPSS files using readstat library
		* Import MATLAB MAT files using matio library
		* HDF5: Select first variable when loading file
		* HDF5: Use data type when importing data
		* HDF5: Preview and import 2d data of strings
	* [spreadsheet]:
		* Allow to freeze the first column
		* Conditional heatmap formatting
		* Support value labels
		* Extended statistics dialog - show additional visualizations (histogram, KDE plot, normal Q-Q plot, BoxPlot)
		* List random number distributions alphabetically
	* [worksheet]:
		* Info Element - a new worksheet element to annotate curve values on the plot
		* BoxPlot
		* Crosshair cursor mode in the plot
		* New themes "Monokai", "ggplot grey", "ggplot dark", "Tufte"
		* New curve symbols "heart" and "lightning"
		* Allow to specify text label's position in logical plot coordinates
		* Allow to use a custom column to set the text for the axis ticks
		* Allow to resize the plots on the worksheet with the mouse when no layout is active
		* Plot border type - allow to specify which lines of the plot rectangular to draw (left, top, etc.)
		* Support multiple plot ranges
		* Support real scientific notation and improve other notations of axes label
		* Support axes auto tick number and improve range auto scaling
		* Optional showing axis scale and offset in plot
		* Add inverse axis scale