@@ -9,6 +9,7 @@
 		* Open new project per default on startup
 		* Examples Dialog - an easy way to browse through all available example projects and to open them directly in the application
 		* Allow to save the project without the results of the calculations in the analysis curves to reduce the size of project file
+		* Use XZ compression of project files per default
 	* [analysis]
 		* Support Mathieu functions via GSL
 		* Added Hilbert transform including envelope
